tests/baselines/reference/DateTimeFormatAndNumberFormatES2021.errors.txt
tests/cases/compiler/DateTimeFormatAndNumberFormatES2021.ts(1,29): error TS2339: Property 'formatRange' does not exist on type 'NumberFormat'.
tests/cases/compiler/DateTimeFormatAndNumberFormatES2021.ts(4,25): error TS2339: Property 'formatRange' does not exist on type 'NumberFormat'.
tests/cases/compiler/DateTimeFormatAndNumberFormatES2021.ts(5,25): error TS2339: Property 'formatRangeToParts' does not exist on type 'NumberFormat'.


==== tests/cases/compiler/DateTimeFormatAndNumberFormatES2021.ts (3 errors) ====
    Intl.NumberFormat.prototype.formatRange
                                ~~~~~~~~~~~
!!! error TS2339: Property 'formatRange' does not exist on type 'NumberFormat'.
    Intl.DateTimeFormat.prototype.formatRange
    
    new Intl.NumberFormat().formatRange 
                            ~~~~~~~~~~~
!!! error TS2339: Property 'formatRange' does not exist on type 'NumberFormat'.
    new Intl.NumberFormat().formatRangeToParts
                            ~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'formatRangeToParts' does not exist on type 'NumberFormat'.
    new Intl.DateTimeFormat().formatRange
    new Intl.DateTimeFormat().formatRangeToParts